[package]
name = "seqpls"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "My sequences please - a paired fastq grepper with regex support"
repository = "https://github.com/noamteyssier/seqpls"
readme = "README.md"
categories = ["science::bioinformatics", "command-line-utilities"]
keywords = ["bioinformatics", "genomics", "grep", "sequencing"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
memchr = "2.7.4"
paraseq = "0.1.4"
parking_lot = "0.12.3"
regex = "1.11.1"
niffler = { version = "3.0.0", default-features = false, features = ["gz"] }
flate2 = { version = "1.0.35", default-features = false, features = [
    "zlib-ng",
] }

[profile.release]
lto = true
codegen-units = 1
